# gem

./: .gitignore  BUILD.bazel  CLAUDE.md  MODULE.bazel  README.md  go.mod
opal/: BUILD.bazel  ex1.go  main.go
opal/ex1/: BUILD.bazel
quartz/: BUILD.bazel
