load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "opal",
    embed = [":opal_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "opal_lib",
    srcs = ["main.go"],
    importpath = "github.com/rtahmasbi/gem/opal",
    visibility = ["//visibility:private"],
)
